# Hyper3

./: .gitignore  AGENTS.md  README.md  benchmark.py  benchmark_retrieval.py  demo_discovery.py  demo_full.py  demo_integrated.py  demo_multiway.py  demo_walkthrough.py  opencode.json  pyproject.toml
ai/: add_docstrings.py  add_docstrings_class.py  agents_api.md  agents_conventions.md  agents_design.md  agents_housekeeping.md  agents_readme_audit.md  agents_reference.md  agents_testing.md  agents_writing.md
analysis/: capability_gap_analysis.md
benchmarks/: README.md  bench_00_microbenchmarks.py  bench_01_retrieval.py  bench_02_inference.py  bench_03_analytics.py  bench_04_temporal.py  bench_05_activation.py  bench_06_evolution.py  bench_07_enrichment.py  bench_08_scalability.py  bench_09_retrieval_feedback.py  bench_10_bayesian.py  bench_11_backward_chain.py  bench_12_community.py  bench_13_belief_distributions.py  bench_14_multi_frame.py  run_all.py  shared.py
demos/: README.md  demo.py  demo_discovery.py  demo_full.py  demo_integrated.py  demo_multiway.py  demo_walkthrough.py
designs/: 031_ruliad_inspiration_index.md  032_analogical_reasoning_rule.md  033_pattern_inductive_generalization.md  034_cross_modality_fusion.md  035_context_compression_engine.md  036_feedback_driven_evolution.md  037_adaptive_slice_traversal_wiring.md  038_conceptual_decomposition_rule.md  039_consistency_verification_layer.md  040_probabilistic_causal_learning.md  041_context_aware_cache_eviction.md  it_troubleshooting_engine.md  job_skill_matching_engine.md  medical_timeline_tracker.md  recipe_substitution_engine.md  subsystem-mixin-decomposition.md  weight-semantics.md
docs/: USER_GUIDE.md
examples/: README.md  combined_signal_analysis.py  feedback_demo.py  semantic_knowledge_graph.py
inspiration_analogic_resources/: Hypergraph–Ruliad Integration Framework with spec -- Antonio Quinonez.md  Rulial-Enhanced Hypergraph Cognitive Architecture v2-1 -- Antonio Quinonez.md
issue/: 001-transfinite-reasoning-heuristics-vs-formal.md  002-computational-frames-are-parameter-presets.md  003-hypergraph-is-standard-directed-graph.md  004-terminology-substance-gap.md  progress.md
(+772 files in other folders)
