[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyper3"
version = "0.1.0"
description = "Self-evolving hypergraph cognitive kernel with Ruliad-inspired multiway expansion"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pyright>=1.1"]
viz = ["matplotlib>=3.8"]
faiss = ["faiss-cpu>=1.7"]
project = ["prefect>=2.14", "requests>=2.31", "pandas>=2.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingModuleSource = false

[tool.hatch.build.targets.wheel]
packages = ["src/hyper3"]
