[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyper3"
version = "0.1.0"
description = "Self-evolving hypergraph cognitive kernel with Ruliad-inspired multiway expansion"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pyright>=1.1", "ruff>=0.8", "xgi>=0.10", "hypergraphx>=1.7"]
viz = ["matplotlib>=3.8"]
faiss = ["faiss-cpu>=1.7"]
embed = ["fastembed>=0.4"]
project = ["prefect>=2.14", "requests>=2.31", "pandas>=2.1"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "PERF"]
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"src/hyper3/__init__.py" = ["F401"]
"tests/**" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["hyper3"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingModuleSource = false

[tool.hatch.build.targets.wheel]
packages = ["src/hyper3"]
